# fuel-thread-app

./: fuel-toolchain.toml
contract/: Cargo.toml  Forc.toml
contract/tests/: harness.rs
frontend/: .env  .env.example  .eslintrc.json  .gitignore  Makefile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Messages.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: Form.tsx  List.tsx  MessageCard.tsx
frontend/src/domains/: Message.tsx
frontend/src/hooks/: useFuel.tsx  useIsConnected.tsx
frontend/src/utils/: address.ts
