[package]
name = "thread-contract"
description = "Thread app on-chain using Fuel"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Nauck"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.49", features = ["fuel-core-lib"] }
tokio = { version = "1.33", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
const-hex = "1.9.1"
hex = "0.4.3"
